# NG

./: CMakeLists.txt
include/: uniq.hpp
src/: CMakeLists.txt  in.txt  main.cpp  out.txt  uniq.cpp
